# components/backend/src/application/dto/revoke-access-input.dto.ts
@@ -1,23 +1,23 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsNotEmpty, IsString } from 'class-validator';
+import { IsString, IsNotEmpty } from 'class-validator';
 
 /**
- * DTO для входных данных отзыва доступа у кооператива
+ * DTO для отзыва доступа к данным у кооператива
  */
 export class RevokeAccessInputDTO {
   @ApiProperty({
-    description: 'Имя пользователя',
-    example: 'username',
+    description: 'Имя пользователя, чьи данные отзываются',
+    example: 'username123',
   })
   @IsString()
   @IsNotEmpty()
-  username: string = '';
+  username!: string;
 
   @ApiProperty({
-    description: 'Имя кооператива',
-    example: 'coopname',
+    description: 'Название кооператива, у которого отзывается доступ',
+    example: 'coop_example',
   })
   @IsString()
   @IsNotEmpty()
-  coopname: string = '';
+  coopname!: string;
 }
